--- a/hkhl/b2b.html
+++ b/hkhl/b2b.html
@@ -1049,7 +1049,7 @@ a {
     .p1-logo{left: 188px;top: 460px;width: 355px;height: 113px;}
     .p1-slogan{left: 191px;top:613px;width: 362px;height: 78px;}
     .p1-about{left: 255px;top:823px;width: 239px;height: 81px;}
-    .title{left:162px;top:135px;width:423px;height:138px;background-image: url(../images/title.png);background-repeat: no-repeat;background-size: 750px auto;}
+    .title{left:162px;top:135px;width:423px;height:138px;background-image: url(../images/title1.png);background-repeat: no-repeat;background-size: 750px auto;}
     .scene-2 .title{background-position: 0 0;}
     .scene-3 .title{left: 197px;background-position: 0 -160px;}
     .scene-4 .title{left: 197px;background-position: 0 -320px;}
@@ -1214,17 +1214,17 @@ a {
 .p4-cir7{left: 725px;top:555px;width: 14px;height: 14px;}
 .p4-cir8{left: 148px;top:681px;width: 23px;height: 23px;}
 .p4-cir9{left: 86px;top:780px;width: 115px;height: 115px;}
-.p4-icon1{left: 520px;top:378px;width: 77px;height: 65px;}
+.p4-icon1{left: 534px;top:378px;width: 77px;height: 65px;}
 .p4-icon2{left: 103px;top:529px;width: 52px;height: 48px;}
 .p4-icon3{left: 328px;top:516px;width: 89px;height: 106px;}
-.p4-icon4{left: 578px;top:585px;width: 55px;height: 69px;}
-.p4-icon5{left: 443px;top:816px;width: 62px;height: 62px;}
-.p4-icon9{left: 122px;top:809px;width: 50px;height: 64px;}
+.p4-icon4{left: 572px;top:582px;width: 55px;height: 69px;}
+.p4-icon5{left: 440px;top:810px;width: 62px;height: 62px;}
+.p4-icon9{left: 122px;top:806px;width: 50px;height: 64px;}
 .p4-text1{left: 576px;top:472px;width: 118px;height: 28px;}
 .p4-text2{left: 61px;top:603px;width: 110px;height: 26px;}
 .p4-text3{left: 310px;top:677px;width: 133px;height: 32px;}
-.p4-text4{left: 548px;top:689px;width: 132px;height: 32px;}
-.p4-text5{left: 411px;top:936px;width: 134px;height: 32px;}
+.p4-text4{left: 548px;top:696px;width: 132px;height: 32px;}
+.p4-text5{left: 421px;top:936px;width: 134px;height: 32px;}
 .p4-text9{left: 77px;top:908px;width: 134px;height: 32px;}
 .p4-line{left: 32px;top:391px;width: 696px;height: 469px;}
 .current .p4-cir1{-webkit-animation: slideInLeft41 .3s .1s ease-out both;}
@@ -1281,7 +1281,7 @@ a {
   .p5-4{left: 206px;top:692px;width: 354px;height: 110px;}
   .href-mail{position: absolute;width: 100%;height: 100%;}
   /* icon */
-  .icon{background-image: url(../images/icon1.png);background-repeat: no-repeat;background-size: 960px auto;}
+  .icon{background-image: url(../images/icon2.png);background-repeat: no-repeat;background-size: 960px auto;}
   .icon-3-1{background-position: 0 0;width: 68px;height: 68px;}
   .icon-3-2{background-position: -160px 0;width: 84px;height: 81px;}
   .icon-3-3{background-position: -320px 0;width: 75px;height: 75px;}
@@ -1289,14 +1289,14 @@ a {
   .icon-3-5{background-position: -640px 0;width: 66px;height: 95px;}
   .icon-3-6{background-position: -800px 0;width: 44px;height: 49px;}
   .icon-3-7{background-position: 0 -160px;width: 55px;height: 74px;}
-  .icon-4-1{background-position: -160px -160px;width: 77px;height: 65px;}
+  .icon-4-1{background-position: -160px -160px;width: 50px;height: 64px;}
   .icon-4-2{background-position: -320px -160px;width: 52px;height: 48px;}
-  .icon-4-3{background-position: -480px -160px;width: 89px;height: 106px;}
-  .icon-4-4{background-position: -640px -160px;width: 55px;height: 69px;}
-  .icon-4-5{background-position: -800px -160px;width: 62px;height: 62px;}
+  .icon-4-3{background-position: -480px -160px;width: 97px;height: 97px;}
+  .icon-4-4{background-position: -640px -160px;width: 77px;height: 68px;}
+  .icon-4-5{background-position: -800px -160px;width: 76px;height: 75px;}
   .icon-4-6{background-position: 0 -320px;width: 50px;height: 64px;}
   /* text */
-  .text{background-image: url(../images/text1.png);background-repeat: no-repeat;background-size: 960px auto;}
+  .text{background-image: url(../images/text2.png);background-repeat: no-repeat;background-size: 960px auto;}
   .text-2-1{background-position: 0 0;width: 97px;height: 94px;}
   .text-2-2{background-position: -160px 0;width: 90px;height: 127px;}
   .text-2-3{background-position: -320px 0;width: 138px;height: 143px;}
@@ -1734,7 +1734,26 @@ a {
         <div class="opa-stage stage" data-index="4" data-id="opa_stage_4" style="background-image: url('../images/p4/p4_bg.jpg'); background-color: rgb(153, 153, 153);">
             <div class="mc mc-image delay_0_0s float-mask">
                 <div class="mc-wrap mc-wrap-detail">
-                    <div class="secene-sec secene-1-1" data-sec-index="0" data-sec-first="true" data-sec-last="true"><img src="../images/detail/detail5-1.jpg"></div>
+                    <div class="secene-sec secene-3-1" data-sec-index="0" data-sec-first="true" data-sec-last="true"><img src="../images/detail/detail4-1.jpg"></div>
+                    <div class="secene-sec secene-3-2" data-sec-index="1"><img src="../images/detail/detail4-2.jpg"></div>
+                    <div class="secene-sec secene-3-3" data-sec-index="2"><img src="../images/detail/detail4-3.jpg"></div>
+                    <div class="secene-sec secene-3-4" data-sec-index="3"><img src="../images/detail/detail4-4.jpg"></div>
+                    <div class="secene-sec secene-3-5" data-sec-index="4"><img src="../images/detail/detail4-5.jpg"></div>
+                    <div class="secene-sec secene-3-6" data-sec-index="5"><img src="../images/detail/detail4-6.jpg"></div>
+                    <div class="secene-sec secene-3-4" data-sec-index="6"><img src="../images/detail/detail4-7.jpg"></div>
+                    <div class="secene-sec secene-3-5" data-sec-index="7"><img src="../images/detail/detail4-8.jpg"></div>
+                    <div class="secene-sec secene-3-6" data-sec-index="8" data-sec-last="true"><img src="../images/detail/detail4-9.jpg"></div>
+                </div>
+                <div class="mc-wrap mc-wrap-page">
+                    <span class="icon"></span>
+                    <span class="icon"></span>
+                    <span class="icon"></span>
+                    <span class="icon"></span>
+                    <span class="icon"></span>
+                    <span class="icon"></span>
+                    <span class="icon"></span>
+                    <span class="icon"></span>
+                    <span class="icon"></span>
                 </div>
                 <div class="mc-wrap mc-wrap-page">
                     <span class="icon"></span>
@@ -1746,31 +1765,31 @@ a {
                                             <div class="title"></div>
                                         </div>
                                     </div>
-            <div class="mc mc-image p4-cir1 p-cir">
+            <div class="mc mc-image p4-cir1 p-cir" data-detail="detail4-6">
                 <div class="mc-wrap delay_1_8s duration_0_8s">
                     <div class="img-wrap"><img src="../images/cir/cir_green.png">
                     </div>
                 </div>
             </div>
-            <div class="mc mc-image p4-cir2 p-cir">
+            <div class="mc mc-image p4-cir2 p-cir" data-detail="detail4-8">
                             <div class="mc-wrap delay_1_8s duration_0_8s">
                                 <div class="img-wrap"><img src="../images/cir/cir_oriange.png">
                                 </div>
                             </div>
                         </div>
-            <div class="mc mc-image p4-cir3 p-cir">
+            <div class="mc mc-image p4-cir3 p-cir" data-detail="detail4-1">
                             <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                 <div class="img-wrap"><img src="../images/cir/cir_oriyel.png">
                                 </div>
                             </div>
                         </div>
-            <div class="mc mc-image p4-cir4 p-cir">
+            <div class="mc mc-image p4-cir4 p-cir" data-detail="detail4-2">
                             <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                 <div class="img-wrap"><img src="../images/cir/cir_blue.png">
                                 </div>
                             </div>
                         </div>
-            <div class="mc mc-image p4-cir5 p-cir">
+            <div class="mc mc-image p4-cir5 p-cir" data-detail="detail4-3">
                             <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                 <div class="img-wrap"><img src="../images/cir/cir_purple.png">
                                 </div>
@@ -1794,68 +1813,68 @@ a {
                     </div>
                 </div>
             </div>
-            <div class="mc mc-image p4-cir9 p-cir">
+            <div class="mc mc-image p4-cir9 p-cir" data-detail="detail4-4">
                 <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                     <div class="img-wrap"><img src="../images/cir/cir_greenblue.png">
                     </div>
                 </div>
             </div>
-            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-icon1 p-icon">
+            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-icon1 p-icon" data-detail="detail4-6">
                 <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                     <div class="icon icon-4-1"></div>
                 </div>
             </div>
-            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-icon2 p-icon">
+            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-icon2 p-icon" data-detail="detail4-8">
                             <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                 <div class="icon icon-4-2"></div>
                             </div>
                         </div>
-            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-icon3 p-icon">
+            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-icon3 p-icon"  data-detail="detail4-1">
                             <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                 <div class="icon icon-4-3"></div>
                             </div>
                         </div>
-            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-icon4 p-icon">
+            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-icon4 p-icon" data-detail="detail4-2">
                             <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                 <div class="icon icon-4-4"></div>
                             </div>
                         </div>
-            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-icon5 p-icon">
+            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-icon5 p-icon" data-detail="detail4-3">
                             <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                 <div class="icon icon-4-5"></div>
                             </div>
                         </div>
-            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-icon9 p-icon">
+            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-icon9 p-icon" data-detail="detail4-4">
                             <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                 <div class="icon icon-4-6"></div>
                             </div>
                         </div>
-                        <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-text1 p-text">
+                        <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-text1 p-text" data-detail="detail4-6">
                 <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                     <div class="text text-4-1"></div>
                 </div>
             </div>
-            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-text2 p-text">
+            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-text2 p-text" data-detail="detail4-8">
                             <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                 <div class="text text-4-2"></div>
                             </div>
                         </div>
-            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-text3 p-text">
+            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-text3 p-text" data-detail="detail4-1">
                             <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                 <div class="text text-4-3"></div>
                             </div>
                         </div>
-            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-text4 p-text">
+            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-text4 p-text" data-detail="detail4-2">
                             <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                 <div class="text text-4-4"></div>
                             </div>
                         </div>
-            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-text5 p-text">
+            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-text5 p-text" data-detail="detail4-3">
                             <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                 <div class="text text-4-5"></div>
                             </div>
                         </div>
-                        <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-text9 p-icon">
+                        <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-text9 p-icon" data-detail="detail4-4">
                             <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                 <div class="text text-4-6"></div>
                             </div>
@@ -1994,9 +2013,9 @@ a {
     var tasks = [
       "../images/bg_full.jpg",
       "../images/arrow_icon.png",
-      "../images/title.png",
-      "../images/text1.png",
-      "../images/icon1.png",
+      "../images/title1.png",
+      "../images/text2.png",
+      "../images/icon2.png",
       "../images/cir/cir_blue_opacity.png",
       "../images/cir/cir_blue.png",
       "../images/cir/cir_green.png",
