--- a/hkhl/b2b.html
+++ b/hkhl/b2b.html
@@ -1350,7 +1350,7 @@ a {
 .scene-1 .mc-wrap-detail,.scene-2 .mc-wrap-detail{background-color:#0170cc;}
 .scene-3 .mc-wrap-detail{background-color:#03aa65;}
     /* p-cir-imp */
-    .scene-2.current .p-cir-imp,.scene-3.current .p-cir-imp{-webkit-animation-name: imp-2; -webkit-animation-timing-function: ease-out; animation-timing-function: ease-out;-webkit-animation-delay:.5s;-webkit-animation-duration:1s;-webkit-animation-iteration-count: infinite;}
+    .scene-2.current .p-cir-imp,.scene-3.current .p-cir-imp,.scene-4.current .p-cir-imp{-webkit-animation-name: imp-2; -webkit-animation-timing-function: ease-out; animation-timing-function: ease-out;-webkit-animation-delay:.5s;-webkit-animation-duration:1s;-webkit-animation-iteration-count: infinite;}
     @-webkit-keyframes imp-2 {
         0%{-webkit-transform:translateX(0) translateY(0) scale(1);opacity: 1}
         50%{-webkit-transform:translateX(0) translateY(0) scale(1.1);opacity: 1}
@@ -1763,6 +1763,12 @@ a {
                                             <div class="title"></div>
                                         </div>
                                     </div>
+            <div class="mc mc-image p4-cir3 p-cir" data-detail="detail4-1">
+                <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
+                    <div class="img-wrap"><img src="../images/cir/cir_oriyel.png">
+                    </div>
+                </div>
+            </div>
             <div class="mc mc-image p4-cir1 p-cir" data-detail="detail4-6">
                 <div class="mc-wrap delay_1_8s duration_0_8s">
                     <div class="img-wrap"><img src="../images/cir/cir_green.png">
@@ -1775,12 +1781,7 @@ a {
                                 </div>
                             </div>
                         </div>
-            <div class="mc mc-image p4-cir3 p-cir" data-detail="detail4-1">
-                            <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
-                                <div class="img-wrap"><img src="../images/cir/cir_oriyel.png">
-                                </div>
-                            </div>
-                        </div>
+
             <div class="mc mc-image p4-cir4 p-cir" data-detail="detail4-2">
                             <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                 <div class="img-wrap"><img src="../images/cir/cir_blue.png">
@@ -1817,6 +1818,11 @@ a {
                     </div>
                 </div>
             </div>
+            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-icon3 p-icon"  data-detail="detail4-1">
+                <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
+                    <div class="icon icon-4-3"></div>
+                </div>
+            </div>
             <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-icon1 p-icon" data-detail="detail4-6">
                 <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                     <div class="icon icon-4-1"></div>
@@ -1827,11 +1833,7 @@ a {
                                 <div class="icon icon-4-2"></div>
                             </div>
                         </div>
-            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-icon3 p-icon"  data-detail="detail4-1">
-                            <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
-                                <div class="icon icon-4-3"></div>
-                            </div>
-                        </div>
+
             <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-icon4 p-icon" data-detail="detail4-2">
                             <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                 <div class="icon icon-4-4"></div>
@@ -1847,6 +1849,11 @@ a {
                                 <div class="icon icon-4-6"></div>
                             </div>
                         </div>
+            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-text3 p-text" data-detail="detail4-1">
+                <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
+                    <div class="text text-4-3"></div>
+                </div>
+            </div>
                         <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-text1 p-text" data-detail="detail4-6">
                 <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                     <div class="text text-4-1"></div>
@@ -1857,11 +1864,7 @@ a {
                                 <div class="text text-4-2"></div>
                             </div>
                         </div>
-            <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-text3 p-text" data-detail="detail4-1">
-                            <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
-                                <div class="text text-4-3"></div>
-                            </div>
-                        </div>
+
             <div class="mc mc-image delay_0_3s duration_0_4s mi-zoomIn p4-text4 p-text" data-detail="detail4-2">
                             <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                 <div class="text text-4-4"></div>
